@startuml

title __BUILDER-PIZZA's Class Diagram__\n

  namespace com.company {
    abstract class com.company.BuilderPizza {
    }
  }
  

  namespace com.company {
    class com.company.Cocina {
    }
  }
  

  namespace com.company {
    class com.company.ConcreteBuilderHawai {
    }
  }
  

  namespace com.company {
    class com.company.ConcreteBuilderPicante {
    }
  }
  

  namespace com.company {
    class com.company.Main {
    }
  }
  

  namespace com.company {
    class com.company.Pizza {
    }
  }
  

  com.company.BuilderPizza o-- com.company.Pizza : pizza
  com.company.Cocina o-- com.company.BuilderPizza : builderPizza
  com.company.ConcreteBuilderHawai -up-|> com.company.BuilderPizza
  com.company.ConcreteBuilderPicante -up-|> com.company.BuilderPizza


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
